# trellis

./: .gitattributes  .gitignore  .release-main-sha  ABOUT.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  MANUAL_IMPROVEMENTS.md  README.md  SECURITY.md  install.sh  lib_manifest.json  library.json  library.properties  marketplace_templates.json  package-lock.json  package.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: alerts.rs  api.rs  auth.rs  commands.rs  connection.rs  db.rs  device.rs  diagnostics.rs  discovery.rs  lib.rs  lib_manifest.rs  main.rs  manifest.json  marketplace.rs  marketplace_remote.rs  mqtt.rs  ota.rs  scheduler.rs  secret_store.rs  serial.rs  sinric.rs  sketch_gen.rs  sw.js  web_ui.html  webhooks.rs
app/src/components/: CapabilityBinarySensor.tsx  CapabilityBrightnessLink.tsx  CapabilityCover.tsx  CapabilityWatts.tsx  DeviceAlerts.tsx  DeviceCard.tsx  DeviceDiagnostics.tsx  DeviceEnergy.tsx  DeviceInstallDate.tsx  DeviceLogs.tsx  DeviceNickname.tsx  DeviceNotes.tsx  FleetHealth.tsx
app/src/components/charts/: MetricChart.tsx  UptimeTimeline.tsx
app/src/components/controls/: ColorPicker.tsx  Sensor.tsx  Slider.tsx  Switch.tsx
app/src/components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx
app/src/data/: starterTemplates.ts
app/src/lib/: capabilitySummary.ts  sketchGenerator.ts  sketchTemplate.ts  types.ts
app/src/pages/: Automation.tsx  Dashboard.tsx  DeviceDetail.tsx  FirmwareGenerator.tsx  FloorPlan.tsx  GetStarted.tsx  Home.tsx  Metrics.tsx  OtaManager.tsx  Scenes.tsx  SerialMonitor.tsx  Settings.tsx  TerminalPage.tsx
app/src/pages/settings/: ApiTokensSection.tsx  ConfigSection.tsx  DiagnosticsAboutSection.tsx  MqttSection.tsx  NotificationsSection.tsx  RemoteAccessSection.tsx  SinricSection.tsx  index.tsx  types.ts
app/src/stores/: deviceStore.ts
app/src/styles/: globals.css
docs/: guide.md  how-trellis-is-built.md  protocol.md
examples/AutoConnect/: AutoConnect.ino
examples/BasicSwitch/: BasicSwitch.ino
examples/GreenhouseController/: GreenhouseController.ino
examples/RGBLed/: RGBLed.ino
examples/TemperatureSensor/: TemperatureSensor.ino
scripts/: build_web_ui_header.py  release-library.sh
src/: Capability.h  Trellis.cpp  Trellis.h  TrellisDiscovery.cpp  TrellisDiscovery.h  TrellisOTA.cpp  TrellisOTA.h  TrellisProvisioning.h  TrellisScenes.cpp  TrellisScenes.h  TrellisTelemetry.cpp  TrellisTelemetry.h  TrellisWebServer.cpp  TrellisWebServer.h  TrellisWebUI_html.h  web_ui.html
