[package]
name = "trellis"
version = "0.2.1"
description = "Desktop control center for ESP32 and Pico W devices"
authors = ["Joshua-Ovidiu Drobota <nubiraorg@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "trellis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serialport = "4"
tungstenite = "0.24"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
cron = "0.13"
log = "0.4"
env_logger = "0.11"
rumqttc = "0.24"
