[package]
name = "trellis"
version = "0.4.8"
description = "Desktop control center for ESP32 and Pico W devices"
authors = ["Joshua-Ovidiu Drobota <nubiraorg@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "trellis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serialport = "4"
tungstenite = "0.24"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
flate2 = "1"
cron = "0.13"
log = "0.4"
env_logger = "0.11"
rumqttc = "0.24"
# Re-export the same rustls version that rumqttc uses internally so we can
# build a custom ClientConfig with `dangerous()` for tls_skip_verify.
tokio-rustls = "0.25"
# At-rest encryption for stored secrets (currently the MQTT broker password).
# `age` is an audited file-encryption library; we use it with an x25519
# identity stored in the OS keyring (with a 0600 file fallback for headless
# Linux setups). See secret_store.rs for the bootstrap and key-management
# flow.
age = "0.10"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
# SHA-256 for hashing API tokens before storage. Tokens are minted in
# plaintext, returned to the user exactly once, then immediately hashed —
# the SQLite row only ever holds the digest, so a leaked database can't be
# used to authenticate against the REST API.
sha2 = "0.10"
# Cryptographically secure RNG for API token byte generation. We use 32
# bytes from the OS RNG → base64url-encoded → prefixed `trls_`.
rand = "0.8"
urlencoding = "2"
